# contracts

./: CONTRIBUTING.md  Cargo.toml  README.mdx  pnpm-lock.yaml
.github/workflows/: ci-checks.yml  release.yml
contracts/ethereum/: .gitignore  README.md  foundry.toml  remappings.txt
contracts/ethereum/context-config/: README.md  build.sh  deploy_devnet.sh  foundry.toml
contracts/ethereum/context-config/script/: ContextConfig.s.sol
contracts/ethereum/context-config/src/: ContextConfig.sol
contracts/ethereum/context-config/test/: ContextConfig.t.sol
contracts/ethereum/context-proxy/: .gitignore  build.sh  foundry.toml
contracts/ethereum/context-proxy/mock/: build.sh
contracts/ethereum/context-proxy/mock/broadcast/MockExternalContract.s.sol/31337/: run-1742895583.json  run-latest.json
contracts/ethereum/context-proxy/mock/script/: MockExternalContract.s.sol
contracts/ethereum/context-proxy/mock/src/: MockExternalContract.sol
contracts/ethereum/context-proxy/script/: ContextProxy.s.sol
contracts/ethereum/context-proxy/src/: ContextProxy.sol
contracts/ethereum/context-proxy/test/: ContextProxy.t.sol
contracts/icp/: .gitignore  README.md
contracts/icp/context-config/: Cargo.toml  build.sh  deploy_devnet.sh  dfx.json
contracts/icp/context-proxy/: Cargo.toml  build.sh  build_contracts.sh
contracts/icp/context-proxy/mock/: build.sh
contracts/icp/context-proxy/src/: lib.rs
contracts/icp/context-proxy/tests/: integration.rs
contracts/near/context-config/: Cargo.toml  build.sh
contracts/near/context-config/src/: group_invitation.rs  guard.rs  invitation.rs  lib.rs  mutate.rs  query.rs  sys.rs
contracts/near/context-config/src/sys/: migrations.rs
contracts/near/context-config/src/sys/migrations/: 03_context_groups.rs  04_group_invitations.rs  05_group_migration_method.rs  06_group_permissions.rs
contracts/near/context-config/tests/: groups.rs  lazy_upgrade_propagation.rs  migrations.rs  open_invitations.rs  sandbox.rs
contracts/near/context-proxy/: Cargo.toml  build-test-deps.sh  build.sh
contracts/near/context-proxy/mock/: Cargo.toml  build.sh
contracts/near/context-proxy/mock/tests/: sandbox.rs
contracts/near/context-proxy/src/: ext_config.rs  lib.rs  mutate.rs
contracts/near/context-proxy/tests/: sandbox.rs
contracts/near/context-proxy/tests/common/: counter_helper.rs
contracts/near/registry/: Cargo.toml  build.sh
contracts/near/test-counter/: Cargo.toml
contracts/stellar/: README.md
contracts/stellar/context-config/: Cargo.toml  deploy_devnet.sh
contracts/stellar/context-proxy/: Cargo.toml  build_contracts.sh
contracts/stellar/context-proxy/mock/src/: lib.rs
contracts/stellar/context-proxy/src/: lib.rs
contracts/stellar/context-proxy/tests/: integration.rs
contracts/zksync/: README.md  foundry.toml  hardhat.config.ts  package-lock.json  package.json  remappings.txt  tsconfig.json
contracts/zksync/artifacts-zk/context-proxy/src/ContextProxy.sol/: ContextProxy.json  IContextConfig.dbg.json  IContextConfig.json
contracts/zksync/cache-zk/: solidity-files-cache.json
contracts/zksync/context-config/: build.sh  deploy_devnet.sh
contracts/zksync/context-config/script/: ContextConfig.s.sol
contracts/zksync/context-config/src/: ContextConfig.sol
contracts/zksync/context-proxy/: README.md  build_contracts.sh
contracts/zksync/context-proxy/mock/: build.sh
contracts/zksync/context-proxy/mock/broadcast/MockExternalContract.s.sol/31337/: run-1741880091.json  run-1742315128.json  run-1742812199.json  run-1742840644.json  run-1742853354.json
contracts/zksync/context-proxy/mock/script/: MockExternalContract.s.sol
contracts/zksync/context-proxy/mock/src/: MockExternalContract.sol
contracts/zksync/context-proxy/script/: ContextProxy.s.sol
contracts/zksync/context-proxy/src/: ContextProxy.sol
contracts/zksync/context-proxy/test/: ContextProxy.t.sol
contracts/zksync/contracts/: ContextConfig.sol
scripts/: build-ethereum.sh  build-rust.sh  build-solidity.sh  build-zksync.sh  bump-contracts-version.sh
