[package]
name = "calimero-context-config-icp"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58.workspace = true
calimero-context-config = { workspace = true, features = ["icp"] }
candid.workspace = true
ed25519-dalek.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
pocket-ic = "6.0.0"
rand = "0.8"
ed25519-dalek = "2.0"
