[package]
name = "calimero-context-proxy-icp"
version = "0.4.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58.workspace = true
calimero-context-config = { workspace = true, features = ["icp"] }
candid = { version = "0.10", features = ["value"] }
ed25519-dalek.workspace = true
hex.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-ledger-types.workspace = true
serde = { version = "1.0", features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
pocket-ic = "6.0.0"
rand = "0.8"
reqwest = { version = "0.10.10", features = ["blocking"] }
flate2 = "1.0.35"
