[package]
name = "calimero-context-config-near"
version = "0.6.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
calimero-context-config.workspace = true
cfg-if.workspace = true
near-sdk = { workspace = true, features = ["unstable"] }
hex = "0.4.3"

[dev-dependencies]
ed25519-dalek.workspace = true
eyre.workspace = true
near-crypto.workspace = true
near-workspaces.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio.workspace = true

sha2 = "0.10"

[lints]
workspace = true

[features]
default = []

migrations = []
## migrations (mutually exclusive) ##
01_guard_revisions = []
02_nonces = []
03_context_groups = []
## migrations (mutually exclusive) ##
