[package]
name = "calimero-context-config-stellar"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
calimero-context-config = { workspace = true, features = ["stellar"] }
ed25519-dalek = { version = "2.0.0", default-features = false, features = ["hazmat"] }
soroban-sdk = { workspace = true, features = ["alloc"] }
soroban-env-common = { workspace = true }
stellar-xdr = { workspace = true, default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
